ensure all number columns in tables for BC, Region, Career and Industry profiles are right aligned.

--- a/src/web/themes/custom/workbc/scss/base/_tables.scss
+++ b/src/web/themes/custom/workbc/scss/base/_tables.scss
@@ -50,6 +50,10 @@ tbody {
   border: none;
 }
 
+table .data-align-right {
+  text-align: right;
+}
+
 @include media-breakpoint-down(sm) {
   div.view-industry-profiles:has(.industry-overview-table) {
     padding: 0 0 0 0;
