--- a/src/web/themes/custom/workbc/scss/overrides/_industry_profile.scss
+++ b/src/web/themes/custom/workbc/scss/overrides/_industry_profile.scss
@@ -54,10 +54,6 @@
   padding-bottom: 10px;
 }
 
-.top-ten-job-openings {
-  text-align: right;
-}
-
 .card-profile__content-item table th.top-ten-job-openings {
   padding-right: 10px;
 }
